	* fix choking issue at high upload rates
	* optimized rate limiter
	* make disk cache pool allocator configurable
	* fix library ABI to not depend on logging being enabled
	* use hex encoding instead of base32 in create_magnet_uri
	* include name, save_path and torrent_file in torrent_status, for improved performance
	* separate anonymous mode and force-proxy mode, and tighten it up a bit
	* add per-tracker scrape information to announce_entry
	* report errors in read_piece_alert
	* DHT memory optimization
	* improve DHT lookup speed
	* improve support for windows XP and earlier
	* introduce global connection priority for improved swarm performance
	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fix encryption level handle invalid values
	* add a number of missing functions to the python binding
	* fix typo in Jamfile for building shared libraries
	* prevent tracker exchange for magnet links before metadata is received
	* fix crash in make_magnet_uri when generating links longer than 1024 characters
	* fix hanging issue when closing files on windows (completing a download)
	* fix piece picking edge case that could cause torrents to get stuck at hash failure
	* try unencrypted connections first, and fall back to encryption if it fails (performance improvement)
	* add missing functions to python binding (flush_cache(), remap_files() and orig_files())
	* improve handling of filenames that are invalid on windows
	* support 'implied_port' in DHT announce_peer
	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)

0.16.9 release

	* fix long filename truncation on windows